cabal-version:      3.0
name:               CabalSnippets
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Lautaro Emanuel
maintainer:         emlautarom1@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable CabalSnippets
    import:           warnings
    main-is:          Main.hs
    other-modules:    CompTime
                    , DependencyInjection
                    , EffectfulLogger
                    , EffectfulMain
                    , LensesLib
                    , LensesMain
                    , Math
                    , Merkle
                    , SystemInfo
                    , TaglessFinal
                    , Transformers
    -- other-modules:
    -- other-extensions:
    build-depends:    base < 5
                    , bytestring
                    , containers
                    , hashable
                    -- , optics
                    , lens
                    , mtl
                    , transformers
                    , unliftio
                    , data-has
                    , extra
                    , process
                    , effectful
                    , effectful-core
                    , effectful-plugin
                    , generic-lens
                    , template-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -fplugin=Effectful.Plugin
