cabal-version:      2.4
name:               Lenses
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:             Lautaro Emanuel
maintainer:         emlautarom1@gmail.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Lenses
    main-is:          Main.hs
    other-modules:
                      Lib
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    -- , optics
                    , lens
                    , generic-lens
    hs-source-dirs:   app
    default-language: Haskell2010
