cabal-version:      2.4
name:               Merkle
version:            0.1.0.0
author:             Lautaro Emanuel
maintainer:         emlautarom1@gmail.com

library
    exposed-modules:  Merkle
    build-depends:    base ^>=4.14.3.0
                    , hashable
                    , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
